manifests/patriotsweepstakes.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patriotsweepstakes
  labels:
    app.kubernetes.io/name: patriotsweepstakes
    app.kubernetes.io/instance: patriotsweepstakes
    app.kubernetes.io/version: "1.16.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: patriotsweepstakes
      app.kubernetes.io/instance: patriotsweepstakes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: patriotsweepstakes
        app.kubernetes.io/instance: patriotsweepstakes
    spec:
      serviceAccountName: patriotsweepstakes
      securityContext:
        {}
      containers:
        - name: patriotsweepstakes
          securityContext:
            {}
          image: "awbsough/patriotsweepstakes.com:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources: {}
      imagePullSecrets:
        - name: regcred
