manifests/patriotsweepstakes.com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patriotsweepstakes
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - stage.patriotsweepstakes.com
    secretName: patriotsweepstakes-tls
  rules:
  - host: stage.patriotsweepstakes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: patriotsweepstakes
            port:
              number: 80
